Add missing async pipe

--- a/apps/dashboard/src/app/knowledge-box/knowledge-box-home/knowledge-box-home.component.html
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box-home/knowledge-box-home.component.html
@@ -65,7 +65,7 @@
         <div class="kb-details">
           <div class="title-m title-with-action">
             {{ 'dashboard-home.kb-details.title' | translate }}
-            @if (isKbAdmin) {
+            @if (isKbAdmin | async) {
               <pa-button
                 [routerLink]="kbUrl + '/manage'"
                 icon="gear"
