--- a/apps/dashboard/src/app/knowledge-box/knowledge-box-home/knowledge-box-home.component.html
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box-home/knowledge-box-home.component.html
@@ -1,122 +1,299 @@
 <div class="knowledge-box-home page-spacing">
-  @if (!!(endpoint | async)) {
-    <div
-      data-cy="home-endpoint-container"
-      class="endpoint-container">
-      <div class="title-s">{{ 'stats.endpoint' | translate }}</div>
-      <div class="endpoint-text">
-        <div
-          class="endpoint"
-          data-cy="kb-endpoint">
-          {{ endpoint | async }}
+  @if (kbUrl | async; as kbUrl) {
+    @if (showLeftColumn | async) {
+      <div class="column-container">
+        @if (canUpgrade | async) {
+          <nsi-home-container class="small-container account-type-container">
+            <app-account-status></app-account-status>
+          </nsi-home-container>
+        }
+
+        @if (isKbContrib | async) {
+          <nsi-home-container class="small-container">
+            <div class="upload-data">
+              <div class="title-m">{{ 'dashboard-home.upload-block.title' | translate }}</div>
+              <pa-button
+                [routerLink]="kbUrl + '/upload'"
+                class="full-width"
+                aspect="solid"
+                kind="primary"
+                iconAndText
+                icon="upload">
+                <a [routerLink]="kbUrl + '/upload'">
+                  {{ 'stash.upload_data' | translate }}
+                </a>
+              </pa-button>
+              <div>
+                {{ 'dashboard-home.upload-block.description' | translate }}
+                @if (isDownloadDesktopEnabled | async) {
+                  {{ 'dashboard-home.upload-block.description-desktop' | translate }}
+                }
+              </div>
+              <stf-desktop-sources *ngIf="isDownloadDesktopEnabled | async"></stf-desktop-sources>
+            </div>
+          </nsi-home-container>
+        }
+
+        <nsi-home-container class="small-container">
+          <app-kb-metrics
+            [locale]="locale | async"
+            [metrics]="counters | async"></app-kb-metrics>
+        </nsi-home-container>
+
+        <nsi-home-container class="small-container">
+          <div class="desktop-container">
+            <img
+              src="assets/logos/nuclia-desktop.svg"
+              alt="Nuclia Desktop" />
+            <div>
+              {{ 'dashboard-home.desktop.description' | translate }}
+            </div>
+            <pa-button
+              class="full-width"
+              (click)="openDesktop()">
+              {{ 'dashboard-home.desktop.open' | translate }}
+            </pa-button>
+
+            <small>{{ 'dashboard-home.desktop.available-for' | translate }}</small>
+          </div>
+        </nsi-home-container>
+      </div>
+    }
+
+    <div class="column-container wide-column">
+      <nsi-home-container>
+        <div class="kb-details">
+          <div class="title-m title-with-action">
+            {{ 'dashboard-home.kb-details.title' | translate }}
+            @if (isKbAdmin | async) {
+              <pa-button
+                [routerLink]="kbUrl + '/manage'"
+                icon="gear"
+                aspect="basic">
+                {{ 'dashboard-home.go-to.kb-settings' | translate }}
+              </pa-button>
+            }
+          </div>
+
+          <div>
+            <div class="title-xxs">{{ 'dashboard-home.kb-details.endpoint' | translate }}</div>
+            <div class="details-block">
+              @if (clipboardSupported) {
+                <pa-button
+                  aspect="basic"
+                  size="small"
+                  [icon]="copyIcon.endpoint"
+                  (click)="copyEndpoint()">
+                  {{ 'generic.copy' | translate }}
+                </pa-button>
+              }
+              <pre><code>{{ endpoint | async }}</code></pre>
+            </div>
+          </div>
+          <div>
+            <div class="title-xxs">{{ 'dashboard-home.kb-details.uid' | translate }}</div>
+            <div class="details-block">
+              @if (clipboardSupported) {
+                <pa-button
+                  aspect="basic"
+                  size="small"
+                  [icon]="copyIcon.uid"
+                  (click)="copyUid()">
+                  {{ 'generic.copy' | translate }}
+                </pa-button>
+              }
+              <pre><code>{{ uid | async }}</code></pre>
+            </div>
+          </div>
+          <div>
+            <div class="title-xxs">{{ 'dashboard-home.kb-details.slug' | translate }}</div>
+            <div class="details-block">
+              @if (clipboardSupported) {
+                <pa-button
+                  aspect="basic"
+                  size="small"
+                  [icon]="copyIcon.slug"
+                  (click)="copySlug()">
+                  {{ 'generic.copy' | translate }}
+                </pa-button>
+              }
+              <pre><code>{{ slug | async }}</code></pre>
+            </div>
+          </div>
+          @if ((configuration | async)?.['generative_model']; as model) {
+            <div>
+              <div class="title-xxs">{{ 'dashboard-home.kb-details.language-model' | translate }}</div>
+              <div class="body-s">
+                {{ 'stash.config.option.' + model | translate }}
+              </div>
+            </div>
+          }
+          <div class="title-xxs">
+            {{ (stateLabel | async) || '' | translate }}
+          </div>
         </div>
-        @if (clipboardSupported) {
-          <pa-button
-            aspect="basic"
-            [icon]="copyIcon"
-            (click)="copyEndpoint()">
-            {{ 'generic.copy' | translate }}
-          </pa-button>
+      </nsi-home-container>
+
+      <div class="row-container">
+        @if ((showLeftColumn | async) === false) {
+          <nsi-home-container class="small-container fit-content">
+            <app-kb-metrics
+              [locale]="locale | async"
+              [metrics]="counters | async"></app-kb-metrics>
+          </nsi-home-container>
+        }
+
+        @if ({ lastUploads: lastUploadedResources | async }; as data) {
+          <nsi-home-container
+            class="growing-container"
+            [class.fit-content]="!data.lastUploads || data.lastUploads.length < 6">
+            <div class="kb-content">
+              <section>
+                <div class="title-m title-with-action">
+                  {{ 'dashboard-home.kb-content.latest-resources.title' | translate }}
+                  <pa-button
+                    icon="list"
+                    aspect="basic"
+                    [routerLink]="kbUrl + '/resources'">
+                    {{ 'dashboard-home.go-to.resource-list' | translate }}
+                  </pa-button>
+                </div>
+                @if (data.lastUploads && data.lastUploads.length === 0) {
+                  <p class="no-content">
+                    {{ 'dashboard-home.kb-content.latest-resources.no-upload' | translate }}
+                  </p>
+                } @else if (data.lastUploads && data.lastUploads.length > 0) {
+                  <ul class="latest-uploaded-list">
+                    @for (resource of data.lastUploads; track resource.id) {
+                      <li
+                        paEllipsisTooltip
+                        [routerLink]="kbUrl + '/resources/' + resource.id + '/edit/preview'">
+                        @if (resource.icon | mimeIcon; as icon) {
+                          <pa-icon [name]="icon"></pa-icon>
+                        }
+                        {{ resource.title }}
+                      </li>
+                    }
+                  </ul>
+                }
+              </section>
+
+              <section>
+                <div class="title-m title-with-action">
+                  {{ 'dashboard-home.kb-content.processing-queue.title' | translate }}
+                  <pa-button
+                    icon="clock-dash"
+                    aspect="basic"
+                    [routerLink]="kbUrl + '/resources/pending'">
+                    {{ 'dashboard-home.go-to.pending-list' | translate }}
+                  </pa-button>
+                </div>
+
+                @if ({ pendingCount: pendingResourceCount | async }; as data) {
+                  @if (data.pendingCount === 0) {
+                    <p class="no-content">
+                      {{ 'dashboard-home.kb-content.processing-queue.no-pending' | translate }}
+                    </p>
+                  } @else if (data.pendingCount === 1) {
+                    <p class="body-m">
+                      {{ 'dashboard-home.kb-content.processing-queue.pending' | translate }}
+                    </p>
+                  } @else {
+                    <p class="body-m">
+                      {{
+                        'dashboard-home.kb-content.processing-queue.pendings' | translate: { count: data.pendingCount }
+                      }}
+                    </p>
+                  }
+                }
+              </section>
+            </div>
+          </nsi-home-container>
+        }
+
+        @if (isAccountManager | async) {
+          <nsi-home-container class="growing-container">
+            <div class="usage-charts">
+              <div class="title-m title-with-action">
+                {{ 'dashboard-home.usage.title' | translate }}
+
+                <div>
+                  <nsi-dropdown-button
+                    freeWidth
+                    aspect="basic"
+                    [popupRef]="chartDropdown"
+                    [open]="isChartDropdownOpen">
+                    {{ currentChart.label | translate }}
+                  </nsi-dropdown-button>
+
+                  <pa-dropdown
+                    #chartDropdown
+                    (onClose)="isChartDropdownOpen = false"
+                    (onOpen)="isChartDropdownOpen = true">
+                    @for (option of chartDropdownOptions; track option.id) {
+                      <pa-option
+                        [value]="option.value"
+                        (selectOption)="selectChart(option)">
+                        {{ option.label | translate }}
+                      </pa-option>
+                    }
+                  </pa-dropdown>
+                </div>
+                <pa-button
+                  aspect="basic"
+                  icon="fullscreen"
+                  (click)="openFullscreen()">
+                  {{ 'dashboard-home.usage.fullscreen' | translate }}
+                </pa-button>
+              </div>
+
+              <div class="chart-container">
+                <app-kb-usage-charts
+                  smallContainer
+                  [chartHeight]="chartHeight"
+                  [currentChart]="currentChart"
+                  [processingChart]="processingChart | async"
+                  [searchChart]="searchChart | async"></app-kb-usage-charts>
+
+                <pa-table columns="2fr minmax(80px, 1fr) minmax(80px, 1fr)">
+                  <pa-table-header>
+                    <pa-table-cell></pa-table-cell>
+                    <pa-table-cell>
+                      <span class="body-s">{{ 'metrics.period.last-30-days' | translate }}</span>
+                    </pa-table-cell>
+                    <pa-table-cell>
+                      <span class="body-s">{{ 'metrics.period.last-12-months' | translate }}</span>
+                    </pa-table-cell>
+                  </pa-table-header>
+                  @if (searchQueriesCounts | async; as queriesCount) {
+                    <pa-table-row>
+                      <pa-table-cell>
+                        <span class="body-s">{{ 'metrics.search.title' | translate }}</span>
+                      </pa-table-cell>
+                      @if (locale | async; as locale) {
+                        <pa-table-cell>
+                          <span class="body-s">
+                            <strong>{{ queriesCount.month | number: '1.0-0' : locale }}</strong>
+                          </span>
+                        </pa-table-cell>
+                        <pa-table-cell>
+                          <span class="body-s">
+                            <strong>{{ queriesCount.year | number: '1.0-0' : locale }}</strong>
+                          </span>
+                        </pa-table-cell>
+                      }
+                    </pa-table-row>
+                  }
+                </pa-table>
+              </div>
+            </div>
+          </nsi-home-container>
         }
       </div>
     </div>
   }
-
-  <div class="home-main-layout">
-    <div class="left-column">
-      @if (isAccountManager | async) {
-        <div class="container chart-container">
-          <div class="chart-header">
-            <div class="title-m">{{ 'stats.total_search' | translate }}</div>
-            @if (locale | async; as loc) {
-              <div class="display-m">
-                {{ totalSearch | async | number: '1.0-0' : loc }}
-              </div>
-            }
-          </div>
-          @if (!(search | async)) {
-            <app-empty-chart [numLines]="6"></app-empty-chart>
-          }
-          <app-line-chart [data]="(search | async) || []"></app-line-chart>
-        </div>
-
-        <div class="container chart-container">
-          <div class="chart-header">
-            <div class="title-m">{{ 'stats.processing_time' | translate }}</div>
-          </div>
-          @if (!(processing | async)) {
-            <app-empty-chart [numLines]="3"></app-empty-chart>
-            <app-bar-chart [data]="(processing | async) || []"></app-bar-chart>
-          }
-        </div>
-      }
-    </div>
-
-    <div class="right-column">
-      @if (isKbContrib | async) {
-        <div class="container upload-data">
-          <div class="title-m">{{ 'stash.home.upload-block.title' | translate }}</div>
-          <pa-button
-            [routerLink]="(kbUrl | async) + '/upload'"
-            class="full-width"
-            aspect="solid"
-            kind="primary"
-            iconAndText
-            icon="upload">
-            <a [routerLink]="(kbUrl | async) + '/upload'">
-              {{ 'stash.upload_data' | translate }}
-            </a>
-          </pa-button>
-          <div>
-            {{ 'stash.home.upload-block.description' | translate }}
-            <ng-container *ngIf="isDownloadDesktopEnabled | async">
-              {{ 'stash.home.upload-block.description-desktop' | translate }}
-            </ng-container>
-          </div>
-          <stf-desktop-sources *ngIf="isDownloadDesktopEnabled | async"></stf-desktop-sources>
-        </div>
-      }
-      @if (canUpgrade | async) {
-        <div class="container account-status">
-          <app-account-status></app-account-status>
-        </div>
-      }
-      <div class="container resource-stats">
-        @if (locale | async; as loc) {
-          <div>
-            <dl class="total-resources">
-              <dt>{{ 'stats.total.title' | translate }}</dt>
-              <dd class="display-s">{{ (counters | async)?.resources | number: '1.0-0' : loc }}</dd>
-            </dl>
-            <dl>
-              <dt>{{ 'stats.total.fields' | translate }}</dt>
-              <dd>{{ (counters | async)?.fields | number: '1.0-0' : loc }}</dd>
-
-              <dt>{{ 'stats.total.paragraphs' | translate }}</dt>
-              <dd>{{ (counters | async)?.paragraphs | number: '1.0-0' : loc }}</dd>
-
-              <dt>{{ 'stats.total.sentences' | translate }}</dt>
-              <dd>{{ (counters | async)?.sentences | number: '1.0-0' : loc }}</dd>
-            </dl>
-          </div>
-        }
-      </div>
-
-      <div class="container state-container">
-        <div class="state">
-          <span class="body-m">{{ 'stash.state.label' | translate }}</span>
-          <span class="title-s">{{ stateLabel | async }}</span>
-        </div>
-        @if (isKbAdmin | async) {
-          <pa-button (click)="toggleKbState()">
-            {{ ((isPublished | async) ? 'account.stash.retire' : 'account.stash.publish') | translate }}
-          </pa-button>
-        }
-      </div>
-    </div>
-  </div>
 </div>
 
-@if ((totalSearch | async) || 0 > 0) {
-  <app-knowledge-box-survey [totalSearch]="totalSearch | async"></app-knowledge-box-survey>
+@if ((searchQueriesCounts | async)?.year; as yearCount) {
+  <app-knowledge-box-survey [totalSearch]="yearCount"></app-knowledge-box-survey>
 }
