--- a/libs/common/src/lib/charts/line-chart/line-chart.component.html
+++ b/libs/common/src/lib/charts/line-chart/line-chart.component.html
@@ -7,9 +7,9 @@
     [style.opacity]="showTooltip ? '1' : '0'"
     [style.bottom.px]="tooltipBottom"
     [style.left.px]="tooltipLeft">
-    <ng-container *ngIf="tooltipContent">
+    @if (tooltipContent) {
       <strong>{{ tooltipContent[0] }}</strong>
       <div>{{ tooltipContent[1] }}</div>
-    </ng-container>
+    }
   </div>
 </div>
