[sc-8087] Hide "allow management of KBs" in NUA
New feature flag: `allow-kb-management-from-nua-key`

--- a/apps/dashboard/src/app/account/account-nua/client-dialog/client-dialog.component.html
+++ b/apps/dashboard/src/app/account/account-nua/client-dialog/client-dialog.component.html
@@ -20,9 +20,11 @@
         {{ 'generic.email' | translate }}*
       </pa-input>
 
-      <pa-checkbox formControlName="allow_kb_management">
-        {{ 'account.allow_kb_management' | translate }}
-      </pa-checkbox>
+      @if (isAllowKbManagementEnabled | async) {
+        <pa-checkbox formControlName="allow_kb_management">
+          {{ 'account.allow_kb_management' | translate }}
+        </pa-checkbox>
+      }
 
       <pa-input
         formControlName="webhook"
