Fix chart dropdown position

--- a/apps/dashboard/src/app/knowledge-box/knowledge-box-home/knowledge-box-home.component.scss
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box-home/knowledge-box-home.component.scss
@@ -26,7 +26,7 @@
     gap: var(--gap-size);
 
     &.wide-column {
-      container-type: size;
+      //container-type: size; // FIXME: for now pastanaga dropdown position is broken with this property. we need to fix pastanaga before putting it back
       flex: 1 1 auto;
       max-width: calc(var(--width-small-column) * 2 + var(--gap-size));
       min-width: var(--width-small-column);
