--- a/apps/dashboard/src/app/account/billing/checkout/checkout.component.html
+++ b/apps/dashboard/src/app/account/billing/checkout/checkout.component.html
@@ -20,11 +20,15 @@
         class="body-m"
         *ngIf="accountType | async as account">
         {{ 'account.type.' + account | translate }}
-        <ng-container *ngIf="currency$ | async as currency">
-          <ng-container *ngIf="(prices$ | async)?.[account]?.recurring as prices">
-            - {{ prices.month.price | currency : currency }}/{{ 'billing.month' | translate }}
-          </ng-container>
-        </ng-container>
+        @if (currency$ | async; as currency) {
+          @if ((prices$ | async)?.[account]?.recurring; as prices) {
+            @if (monthly | async) {
+              {{ prices.month.price | currency: currency }}/{{ 'billing.month' | translate }}
+            } @else {
+              {{ prices.year.price | currency: currency }}/{{ 'billing.year' | translate }}
+            }
+          }
+        }
       </div>
     </div>
   </div>
