--- a/apps/dashboard/src/app/account/billing/my-subscription/my-subscription.component.html
+++ b/apps/dashboard/src/app/account/billing/my-subscription/my-subscription.component.html
@@ -7,56 +7,62 @@
       *ngIf="prices$ | async as prices">
       <div class="subscription-tier">
         <div class="title-l">{{ 'account.type.' + (type | async) | translate }}</div>
-        <div *ngIf="prices.recurring">
-          <span
-            class="title-l price"
-            *ngIf="currency$ | async as currency">
-            {{ prices.recurring.month.price | currency: currency }}
-          </span>
-          <span class="unit">/{{ 'billing.month' | translate }}</span>
-        </div>
+        @if (!doNotShowPrice.includes(type | async)) {
+          @if (prices.recurring; as recurring) {
+            @if (currency$ | async; as currency) {
+              <div>
+                <span class="title-l price">
+                  {{ ((monthly | async) ? recurring.month.price : recurring.year.price) | currency: currency }}
+                </span>
+                <span class="unit">/{{ ((monthly | async) ? 'billing.month' : 'billing.year') | translate }}</span>
+              </div>
+            }
+          }
+        }
       </div>
-      <pa-table
-        columns="auto auto auto"
-        *ngIf="currency$ | async as currency">
-        <pa-table-header>
-          <pa-table-cell header>{{ 'billing.quotas_label' | translate }}</pa-table-cell>
-          <pa-table-cell header></pa-table-cell>
-          <pa-table-cell header>{{ 'billing.cost_over_limits' | translate }}</pa-table-cell>
-        </pa-table-header>
-        <pa-table-row>
-          <pa-table-cell>
-            <span class="body-m">{{ 'billing.quotas.kbs' | translate }}</span>
-          </pa-table-cell>
-          <pa-table-cell>
-            <span
-              class="body-m"
-              *ngIf="(defaults | async)?.max_kbs as maxKbs">
-              {{ maxKbs === -1 ? ('billing.unlimited' | translate) : maxKbs }}
-            </span>
-          </pa-table-cell>
-          <pa-table-cell>-</pa-table-cell>
-        </pa-table-row>
-        <pa-table-row *ngFor="let param of params">
-          <pa-table-cell>
-            <span class="body-m">{{ 'billing.quotas.' + param | translate }}</span>
-          </pa-table-cell>
-          <pa-table-cell>
-            <span class="body-m">
-              {{ prices.usage[param].threshold | number }}
-              {{ param === 'media' ? ('billing.hours' | translate) : '' }}
-            </span>
-          </pa-table-cell>
-          <pa-table-cell>
-            <span>
-              <span class="body-m">{{ prices.usage[param].price | currency: currency : 'symbol' : '1.2-6' }}</span>
-              <span class="unit">
-                /{{ (['media', 'training'].includes(param) ? 'billing.hour' : 'billing.unit') | translate }}
+      @if (isDeprecatedAccount | async) {
+        <pa-table
+          columns="auto auto auto"
+          *ngIf="currency$ | async as currency">
+          <pa-table-header>
+            <pa-table-cell header>{{ 'billing.quotas_label' | translate }}</pa-table-cell>
+            <pa-table-cell header></pa-table-cell>
+            <pa-table-cell header>{{ 'billing.cost_over_limits' | translate }}</pa-table-cell>
+          </pa-table-header>
+          <pa-table-row>
+            <pa-table-cell>
+              <span class="body-m">{{ 'billing.quotas.kbs' | translate }}</span>
+            </pa-table-cell>
+            <pa-table-cell>
+              <span
+                class="body-m"
+                *ngIf="(defaults | async)?.max_kbs as maxKbs">
+                {{ maxKbs === -1 ? ('billing.unlimited' | translate) : maxKbs }}
               </span>
-            </span>
-          </pa-table-cell>
-        </pa-table-row>
-      </pa-table>
+            </pa-table-cell>
+            <pa-table-cell>-</pa-table-cell>
+          </pa-table-row>
+          <pa-table-row *ngFor="let param of params">
+            <pa-table-cell>
+              <span class="body-m">{{ 'billing.quotas.' + param | translate }}</span>
+            </pa-table-cell>
+            <pa-table-cell>
+              <span class="body-m">
+                {{ prices.usage[param].threshold | number }}
+                {{ param === 'media' ? ('billing.hours' | translate) : '' }}
+              </span>
+            </pa-table-cell>
+            <pa-table-cell>
+              <span>
+                <span class="body-m">{{ prices.usage[param].price | currency: currency : 'symbol' : '1.2-6' }}</span>
+                <span class="unit">
+                  /{{ (['media', 'training'].includes(param) ? 'billing.hour' : 'billing.unit') | translate }}
+                </span>
+              </span>
+            </pa-table-cell>
+          </pa-table-row>
+        </pa-table>
+      }
       <div
         class="title-s"
         *ngIf="activeSubscription | async">
